[package]
name = "poius"
version = "0.1.0"
authors = ["Aly Ahmed Aly <aaly28623@gmail.com>"]
edition = "2021"
rust-version = "1.77.2"
description = "A short description of my package"
documentation = "https://docs.rs/poius"
readme = "README.md"
repository = "https://github.com/King-Masr/Poius"
license = "MIT"
keywords = ["poius", "rust"]
categories = ["rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
