[package]
name = "poius"
version = "0.1.3"
authors = ["Aly Ahmed Aly <aaly28623@gmail.com>"]
edition = "2021"
rust-version = "1.77.2"
description = "Poius is a command-line interface (CLI) tool written in Rust for encoding and decoding files and directories using base64 encoding."
documentation = "https://docs.rs/poius"
readme = "README.md"
repository = "https://github.com/King-Masr/Poius"
license = "MIT"
keywords = ["poius", "rust"]
categories = ["rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"